--- a/template/package.json
+++ b/template/package.json
@@ -17,24 +17,5 @@
   "devDependencies": {
     {{devDeps vueVersion plugins}}
   },
-  "author": "{{author}}",
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+  "author": "{{author}}"
 }
